@startuml
left to right direction

skinparam classAttributeIconSize 0

class suppliers {
    - id: string
    - name: string
    - address: string
    - tax_code: string
    - note: string
    - created_at: date
    - created_by: string
    - updated_at: date
    - updated_by: string
    + get(): List<suppliers>
    + create(supplier: Supplier): Supplier
    + update(supplier: Supplier): Supplier
    + delete(id: string): void
    + findById(id: string): Supplier
    + search(keyword: string): List<suppliers>
}

class book_imports {
    - id: string
    - supplier_id: string
    - total_cost: double
    - note: string
    - reason: string
    - status: int
    - created_at: date
    - created_by: string
    - updated_at: date
    - updated_by: string
    + get(): List<book_imports>
    + create(import: BookImport): BookImport
    + update(import: BookImport): BookImport
    + findById(id: string): BookImport
    + search(keyword: string): List<book_imports>
    + export(): File
}

class book_exports {
    - id: string
    - supplier_id: string
    - total_cost: double
    - note: string
    - reason: string
    - status: int
    - created_at: date
    - created_by: string
    - updated_at: date
    - updated_by: string
    + get(): List<book_exports>
    + create(export: BookExport): BookExport
    + update(export: BookExport): BookExport
    + findById(id: string): BookExport
    + search(keyword: string): List<book_exports>
    + export(): File
}

class book_import_items {
    - id: string
    - book_import_id: string
    - book_sku: string
    - quantity: int
    - unit_price: double
    - total_cost: double
}

class book_export_items {
    - id: string
    - book_export_id: string
    - book_sku: string
    - quantity: int
    - unit_price: double
    - total_cost: double
}

class books {
}

' Các quan hệ logic, có nhãn mô tả
suppliers "1" o-- "*" book_imports : provides
suppliers "1" o-- "*" book_exports : receives

book_imports "1" o-- "*" book_import_items : includes
book_exports "1" o-- "*" book_export_items : includes

books "1" o-- "*" book_import_items : item
books "1" o-- "*" book_export_items : item

@enduml
